TELCODOCS-1576: Image-based update with Lifecycle Agent Operator

--- a/_attributes/common-attributes.adoc
+++ b/_attributes/common-attributes.adoc
@@ -259,3 +259,5 @@ endif::[]
 :odf-first: Red Hat OpenShift Data Foundation (ODF)
 :odf-full: Red Hat OpenShift Data Foundation
 :odf-short: ODF
+//IBU
+:lcao: Lifecycle Agent Operator
