--- a/scalability_and_performance/ztp_far_edge/ztp-talm-updating-managed-policies.adoc
+++ b/scalability_and_performance/ztp_far_edge/ztp-talm-updating-managed-policies.adoc
@@ -59,6 +59,39 @@ include::modules/cnf-topology-aware-lifecycle-manager-creating-custom-resources.
 [role="_additional-resources"]
 .Additional resources
 
-* For more information about the {cgu-operator} pre-caching workflow, see xref:../../scalability_and_performance/ztp_far_edge/cnf-talm-for-cluster-upgrades.adoc#talo-precache-feature-concept_cnf-topology-aware-lifecycle-manager[Using the container image pre-cache feature].
+* For more information about the {cgu-operator} precaching workflow, see xref:../../scalability_and_performance/ztp_far_edge/cnf-talm-for-cluster-upgrades.adoc#talo-precache-feature-concept_cnf-topology-aware-lifecycle-manager[Using the container image precache feature].
 
 include::modules/cnf-topology-aware-lifecycle-manager-autocreate-cgu-cr-ztp.adoc[leveloffset=+1]
+
+// IBU with LCAO
+
+include::modules/ztp-image-based-upgrade.adoc[leveloffset=+1]
+
+include::modules/ztp-image-based-upgrade-installing-lifecycle-agent-using-cli.adoc[leveloffset=+2]
+
+include::modules/ztp-image-based-upgrade-installing-lifecycle-agent-using-web-console.adoc[leveloffset=+2]
+
+include::modules/ztp-image-based-upgrade-generate-seed-image.adoc[leveloffset=+2]
+
+[role="_additional-resources"]
+.Additional resources
+
+* link:https://www.redhat.com/en/blog/a-guide-to-creating-a-separate-disk-partition-at-installation-time[A Guide for Creating a Separate-disk Partition at Installation Time]
+
+include::modules/ztp-image-based-upgrade-prep.adoc[leveloffset=+2]
+
+[role="_additional-resources"]
+.Additional resources
+
+* xref:../../backup_and_restore/application_backup_and_restore/installing/installing-oadp-ocs.adoc#oadp-about-backup-snapshot-locations_installing-oadp-ocs[About backup and snapshot locations and their secrets]
+
+include::modules/ztp-image-based-upgrade-with-backup.adoc[leveloffset=+2]
+
+include::modules/ztp-image-based-upgrade-rollback.adoc[leveloffset=+2]
+
+////
+[role="_additional-resources"]
+.Additional resources
+
+* xref:../../scalability_and_performance/ztp_far_edge/ztp-reference-cluster-configuration-for-vdu.adoc#ztp-sno-du-enabling-workload-partitioning_sno-configure-for-vdu[Workload partitioning]
+////
