--- a/modules/ztp-image-based-upgrade-prep.adoc
+++ b/modules/ztp-image-based-upgrade-prep.adoc
@@ -27,14 +27,9 @@ This example procedure demonstrates how to back up and upgrade a cluster with ap
 The target cluster does not need to be detached from the hub cluster.
 ====
 
-. Specify what you want to back up:
-//TODO decide how to present this info. Might be best to create a reference section with all the example CRs.
+. (Optional) Create your OADP `Backup` and `Restore` CRs. For more information, see _"Additonal resources"_.
 
-`backup_acm_klusterlet.yaml`:: This allows you to reattach the cluster to the hub cluster once the upgrade and restore are completed.
-`backup_localvolume.yaml`:: This allows to restore the persistent volume that contains the `index.html` of your application.
-`backup_app.yaml`:: This CR specifies what needs to be backed up to recover the applications. The information that must be backed up is different for each application.
-
-. Define the restore order for the OADP Operator in the `Restore` CR by using the `lca.openshift.io/apply-wave` field:
+.. Define the restore order for the OADP Operator in the `Restore` CR by using the `lca.openshift.io/apply-wave` field:
 +
 [source,yaml]
 ----
@@ -54,7 +49,7 @@ spec:
 apiVersion: velero.io/v1
 kind: Restore
 metadata:
-  name: apache-app
+  name: example-app
   namespace: openshift-adp
   labels:
     velero.io/storage-location: default
@@ -62,7 +57,7 @@ metadata:
     lca.openshift.io/apply-wave: "3"
 spec:
   backupName:
-    apache-app
+    example-app
 ---
 apiVersion: velero.io/v1
 kind: Restore
@@ -78,9 +73,7 @@ spec:
     localvolume
 ----
 
-. Create a `ConfigMap` CR for the backup and restore information that the {lcao} passes to OADP Operator during the upgrade.
-
-.. Create a `kustomization.yaml` that appends the information to a `ConfigMap` CR:
+.. Create a `kustomization.yaml` that will append the information to a new `ConfigMap` CR:
 +
 [source,yaml]
 ----
@@ -121,7 +114,7 @@ metadata:
 $ oc apply -f OadpCm.yaml
 ----
 
-. Update the the `ImageBasedUpgrade` CR with the backup and restore information:
+. Apply the the `ImageBasedUpgrade` CR:
 +
 [source,yaml]
 ----
@@ -134,13 +127,13 @@ spec:
   seedImageRef:
     version: 4.14.6 <1>
     image: <seed_container_image> <2>
-  oadpContent: <3>
-  - name: oadp-cm-example
-    namespace: openshift-adp
+#  oadpContent: <3>
+#  - name: oadp-cm-example
+#    namespace: openshift-adp
 ----
 <1> Specify the platform version on the seed image.
 <2> Specify the repository where the target cluster can pull the seed image from.
-<3> Add the `oadpContent` section with the OADP `ConfigMap` information.
+<3> (Optional) Add the `oadpContent` section with the OADP `ConfigMap` information.
 // For telco, we need a sample with extraManifests and oadpContent
 
 . Move the stage to `Prep` in the `ImageBasedUpgrade` CR:
