--- a/modules/ztp-image-based-upgrade-with-backup.adoc
+++ b/modules/ztp-image-based-upgrade-with-backup.adoc
@@ -6,7 +6,7 @@
 [id="ztp-image-based-upgrading-with-backup_{context}"]
 = Upgrading the {sno} cluster with {lcao}
 
-Once you generated the seed image and completed the `Prep` stage, you can move to upgrading the target cluster.
+Once you generated the seed image and completed the `Prep` stage, you can upgrade the target cluster.
 During the upgrade process, the OADP Operator creates a backup of the artifacts specified in the OADP CRs, then the {lcao} reimages the cluster.
 
 [IMPORTANT]
